Resolved mobile Nav-collapse button added github linkdln buttons

--- a/style.css
+++ b/style.css
@@ -24,3 +24,7 @@ body{
     border-bottom-right-radius: 50% 50%;
     border-bottom-left-radius: 50% 50%;
   }
+
+.my-nav { 
+    margin-left: auto; 
+} 
